--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xmas Final: Fast & Heavy Inertia</title>
+    <title>Xmas Tree - By NNMINH</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap');
         body { margin: 0; overflow: hidden; background-color: #000502; font-family: 'serif'; }
@@ -415,4 +415,5 @@
         init();
     </script>
 </body>
+
 </html>
