--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@
         let particleSystem = [], photoMeshGroup = new THREE.Group(), handLandmarker, video;
         let snowSystem, snowGeo;
         
-        // --- FIX: Tăng tốc độ lên 0.8 ---
+        let photoPositions = [];
         const TARGET_SPEED_VAL = 0.8; 
-        let currentRealSpeed = 0.2; // Bắt đầu từ từ
+        let currentRealSpeed = 0.2; 
+        const whiteColor = new THREE.Color(0xffffff); 
 
         const goldFrameMat = new THREE.MeshStandardMaterial({
             color: 0xffd700, metalness: 0.7, roughness: 0.2, side: THREE.DoubleSide
@@ -207,6 +208,30 @@
             mainGroup.add(photoMeshGroup);
         }
 
+        function getSafeScatterPosition() {
+            let pos = new THREE.Vector3();
+            let valid = false;
+            let attempts = 0;
+            while (!valid && attempts < 100) {
+                pos.set((Math.random()-0.5)*50, (Math.random()-0.5)*40, (Math.random()-0.5)*40);
+                if (Math.abs(pos.x) < 5 && pos.z > 10) {
+                    attempts++;
+                    continue;
+                }
+                let overlap = false;
+                for (let existing of photoPositions) {
+                    if (pos.distanceTo(existing) < 5.0) { 
+                        overlap = true;
+                        break;
+                    }
+                }
+                if (!overlap) valid = true;
+                attempts++;
+            }
+            photoPositions.push(pos);
+            return pos;
+        }
+
         class Particle {
             constructor(mesh, type, index = 0, total = 0) {
                 this.mesh = mesh;
@@ -219,6 +244,13 @@
                 this.randomOffset = Math.random() * Math.PI * 2; 
                 this.randomSpeed = 0.5 + Math.random(); 
                 this.randomAmp = 0.05 + Math.random() * 0.15; 
+
+                if (this.type === 'ORNAMENT') {
+                    this.baseColor = this.mesh.material.color.clone(); 
+                    this.flashIntensity = 0; 
+                    this.nextFlashTime = Math.random() * 10; 
+                }
+
                 this.calculatePositions();
             }
             calculatePositions() {
@@ -236,6 +268,14 @@
                 } else if (this.type === 'STAR') {
                     this.posTree.set(0, h/2 + 1.5, 0);
                     this.posScatter.set(0, 60, 0); 
+                } else if (this.type === 'PHOTO') {
+                    let t = Math.pow(Math.random(), 0.82);
+                    const y = (t*h) - h/2;
+                    let rMax = CONFIG.particles.treeRadius * (1.0 - t);
+                    const angle = t*45*Math.PI + Math.random()*Math.PI;
+                    const r = Math.max(rMax, 0.4) * (0.7 + Math.random() * 0.3);
+                    this.posTree.set(Math.cos(angle)*r, y, Math.sin(angle)*r);
+                    this.posScatter.copy(getSafeScatterPosition());
                 } else {
                     let t = Math.pow(Math.random(), 0.82);
                     const y = (t*h) - h/2;
@@ -250,8 +290,34 @@
                 let target = (mode === 'TREE') ? this.posTree.clone() : this.posScatter;
                 let targetScale = new THREE.Vector3(1, 1, 1);
 
-                if (this.type === 'PHOTO' && mode !== 'FOCUS') {
-                    targetScale.set(0.3, 0.3, 0.3);
+                if (this.type === 'ORNAMENT') {
+                    this.nextFlashTime -= dt;
+                    if (this.nextFlashTime <= 0) {
+                        if (Math.random() < 0.3) { 
+                            this.flashIntensity = 1.0; 
+                        }
+                        this.nextFlashTime = 2 + Math.random() * 5; 
+                    }
+                    if (this.flashIntensity > 0) {
+                        this.flashIntensity -= dt * 2.0; 
+                        if (this.flashIntensity < 0) this.flashIntensity = 0;
+                        this.mesh.material.color.copy(this.baseColor).lerp(whiteColor, this.flashIntensity);
+                    }
+                }
+
+                if (this.type === 'PHOTO') {
+                    if (mode === 'TREE') {
+                        targetScale.set(0.8, 0.8, 0.8);
+                    } 
+                    else if (mode === 'FOCUS') {
+                        if (this.mesh !== focusTarget) {
+                            target = this.posScatter;
+                            targetScale.set(1.5, 1.5, 1.5);
+                        }
+                    }
+                    else if (mode === 'SCATTER') {
+                        targetScale.set(1.5, 1.5, 1.5);
+                    }
                 }
 
                 if (mode === 'TREE' && this.type !== 'STAR') {
@@ -261,7 +327,8 @@
                 }
 
                 if (mode === 'FOCUS' && this.mesh === focusTarget) {
-                    const targetWorld = new THREE.Vector3(-1.85, 2, 46); 
+                    // --- FIX: Đặt tọa độ X là -0.5 theo yêu cầu ---
+                    const targetWorld = new THREE.Vector3(-0.5, 2, 46); 
                     const invMatrix = mainGroup.matrixWorld.clone().invert();
                     target = targetWorld.applyMatrix4(invMatrix);
 
@@ -271,8 +338,12 @@
                     targetScale.set(1.8, 1.8, 1.8);
 
                 } else if (this.type === 'PHOTO') {
-                    this.mesh.rotation.set(0, 0, 0);
-                    this.mesh.lookAt(new THREE.Vector3(0, this.mesh.position.y, 0));
+                    if (mode === 'SCATTER' || (mode === 'FOCUS' && this.mesh !== focusTarget)) {
+                         this.mesh.lookAt(camera.position);
+                    } else {
+                         this.mesh.rotation.set(0, 0, 0);
+                         this.mesh.lookAt(new THREE.Vector3(0, this.mesh.position.y, 0));
+                    }
                 }
                 
                 this.mesh.position.lerp(target, 3.5 * dt);
@@ -311,10 +382,13 @@
                     const lm = res.landmarks[0];
                     STATE.handX = lm[8].x; 
 
+                    const middleToWrist = Math.hypot(lm[12].x - lm[0].x, lm[12].y - lm[0].y);
+                    const isFist = middleToWrist < 0.25;
+
                     const pinch = Math.hypot(lm[4].x - lm[8].x, lm[4].y - lm[8].y);
                     const spread = Math.hypot(lm[8].x - lm[0].x, lm[8].y - lm[0].y);
 
-                    if (pinch < 0.05) {
+                    if (pinch < 0.05 && !isFist) { 
                         if (STATE.mode !== 'FOCUS') {
                             const allPhotos = particleSystem.filter(p => p.type === 'PHOTO');
                             if (allPhotos.length > 0) {
@@ -386,23 +460,15 @@
             const dt = clock.getDelta();
             const time = clock.getElapsedTime(); 
 
-            // --- FIX: LOGIC MƯỢT MÀ ---
-            let targetSpeed = TARGET_SPEED_VAL; // Mặc định xoay phải với tốc độ 0.8
+            let targetSpeed = TARGET_SPEED_VAL; 
 
             if (STATE.mode === 'FOCUS') {
-                // Khi xem ảnh: Giảm tốc cực mạnh để dễ xem
-                targetSpeed = 0.1;
-                // Nếu có tay, cho phép đảo chiều nhẹ
-                if (STATE.hasHand) targetSpeed *= (STATE.handX < 0.5 ? 1 : -1);
+                targetSpeed = 0.05; 
             } 
             else if (STATE.hasHand) {
-                // Điều khiển hướng: Trái (+) / Phải (-)
                 targetSpeed = (STATE.handX < 0.5) ? TARGET_SPEED_VAL : -TARGET_SPEED_VAL;
             }
 
-            // --- SMOOTHING ---
-            // Thay vì gán thẳng, ta dùng công thức quán tính
-            // Hệ số 0.02 (rất nhỏ) giúp tốc độ thay đổi từ từ
             currentRealSpeed += (targetSpeed - currentRealSpeed) * 0.02;
 
             mainGroup.rotation.y += currentRealSpeed * dt;
@@ -415,5 +481,4 @@
         init();
     </script>
 </body>
-
 </html>
